<resources>
    <string name="app_name">GR_Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email_or_username">Email or Username</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_sign_in"> Cannot connect to server, please try again later</string>
    <string name="error_bad_credential">Wrong Username or Password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign Up</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="error_server">Server error, please try again later</string>
    <string name="error_session">Your session has exprired, please log in again</string>
    <string name="error_place_api">Place API error</string>
    <string name="prompt_find_place">Find a place ?</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_bookmark">Bookmarks</string>
    <string name="menu_car">Cars</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help</string>
    <string name="menu_manager">Manager</string>
    <string name="title_slot">Slots</string>
    <string name="hint_address">Address</string>
    <string name="hint_capacity">70</string>
    <string name="prompt_register">Not an user? Register now</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_other">Others</string>
    <string name="prompt_insert">Insert</string>
    <string name="prompt_add_vehicle">Add Vehicle</string>
    <string name="action_add">Add</string>
    <string-array name="car_seat">
        <item>4 seats</item>
        <item>7 seats</item>
        <item>16 seats</item>
    </string-array>
    <string name="title_activity_manager">ManagerActivity</string>

    <string name="role_user">ROLE_USER</string>
    <string name="role_manager">ROLE_MANAGER</string>
    <string name="title_car_type">Car type</string>
    <string name="title_license_plate">License plate</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New Password</string>
    <string name="prompt_change_password">Change password</string>
    <string name="prompt_logout">Logout</string>
    <string name="prompt_condition_password">* At least 6 characters</string>
    <string name="message_no_booking">You have no booking yet</string>
    <string name="title_address">Address</string>
    <string name="title_date">Date</string>
    <string name="title_plate">Plate</string>
    <string name="action_cancel">Cancel</string>
    <string name="prompt_booking">Reservation info</string>
    <string name="action_booking">book</string>
    <string name="confirm_delete_car">Are you sure to delete ?</string>
    <string name="action_ok">OK</string>
    <string name="confirm_cancel">Are you sure to cancel ?</string>
    <string name="action_navigate">Navigate</string>
    <string name="title_capacity">Capacity</string>
    <string name="title_active_time">Active time</string>
    <string name="title_distance">Distance</string>
    <string name="title_name">Name</string>
    <string name="title_coordinates">Coordinates</string>
    <string name="title_home">Home</string>
    <string name="title_details">Details</string>
    <string name="title_chart">Chart</string>
    <string name="message_no_car">You have no car yet, create one?</string>
    <string name="prompt_add_invoice">Add vehicle</string>
    <string name="alert_accept">Are your sure to check in %1$s?</string>
    <string name="alert_checkout">Are you sure to checkout %1$s?</string>
    <string name="message_booking_success">Book success</string>
    <string name="message_booking_change">Change success</string>
    <string name="title_create">Create:</string>
    <string name="title_end">End:</string>
    <string name="title_status">Status:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Search</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_time">at</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="title_male">Male</string>
    <string name="title_female">Female</string>
    <string name="title_logout">Logout</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="message_edit_profile_success">Edited</string>
    <string name="message_already_booking">You already booked, please check the pending request</string>
    <string name="message_plate_already_exist">This plate number already been used</string>
    <string name="message_full_slot">No more slot left</string>
    <string name="action_change">Change</string>
    <string name="message_reserve_changed">Reservation changed</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_book_count">Booked: 0 times</string>
    <string name="hint_cancel_count">Canceled: 0 times</string>
    <string name="message_no_comment">Click here to add your comment</string>
    <string name="prompt_no_review">No review yet</string>
    <string name="prompt_all_review">All reviews</string>
    <string name="prompt_all_car">All car</string>
    <string name="prompt_no_car">Parking lot empty</string>
    <string name="hint_price">Price</string>
    <string name="title_price">Price</string>
    <string name="title_fee">Fee:</string>
    <string name="error_no_map_application">Your device have no Google map application, please download before using navigate</string>
    <string name="title_time_duration">Time duration</string>
    <string name="message_close">Parking lot is going to close</string>
    <string name="title_duration">Duration</string>
    <string name="prompt_chose_location">Chose your destination</string>
    <string name="prompt_prefer_value">Chose your prefered value</string>
    <string name="title_budget">Budget (đ/h)</string>
    <string name="title_max_distance">Max distance (km)</string>
    <string name="title_time_remain">Time remain (h)</string>
    <string name="prompt_favor">Which one do you favor</string>
    <string name="action_search">Search</string>
    <string name="message_select_destination">You have to select your destination to continue</string>
    <string name="message_no_fit">No parking lot fit your search</string>
    <string name="action_nearest">To nearest parking lot</string>
    <string name="message_no_parking_lot">System have no parking lot</string>
    <string name="hint_spent">Spent: 0đ</string>
    <string name="message_short_money">Your budget is not enough</string>
    <string name="title_total_fee">Total fee:</string>
    <string name="message_checkout_complete">Checkout complete</string>
    <string name="title_checkout_late">Checkout late:</string>
    <string name="title_late">Late:</string>
    <string name="error_canceled">User canceled the booking</string>
    <string name="title_budget_amount">Budget</string>
    <string name="title_recharge">Recharge</string>
    <string name="val_50">50.000 đ</string>
    <string name="val_100">100.000 đ</string>
    <string name="val_200">200.000 đ</string>
    <string name="val_500">500.000 đ</string>
    <string name="val_0">0 đ</string>
    <string name="message_recharge_success">Recharge success</string>
    <string name="message_confirm_recharge">Are you sure to recharge ?</string>
    <string name="error_unknow">Something happened</string>
    <string name="hint_default_value">~</string>
    <string name="action_edit">Edit</string>
    <string name="title_gender">Gender</string>
    <string name="error_invalid_info">Invalid information</string>
    <string name="action_submit">Submit</string>
    <string name="hint_comment">Your comment</string>
    <string name="prompt_tell_other">Tell others what you think</string>
    <string name="prompt_rate">Rate this parking lot</string>
</resources>
