<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nav_bookmark"
            android:icon="@drawable/ic_favorite_on"
            android:title="@string/menu_bookmark" />
        <item
            android:id="@+id/menu_nav_car"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/menu_car" />
        <item
            android:id="@+id/menu_nav_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_setting" />
    </group>

    <item android:title="@string/prompt_other">
        <menu>
            <item
                android:id="@+id/menu_nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/menu_nav_manager"
                android:icon="@drawable/ic_person"
                android:title="@string/menu_manager" />
        </menu>
    </item>

</menu>
