<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="6dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/rubik"
        android:gravity="center"
        android:text="@string/prompt_booking"
        android:textColor="@color/white"
        android:textSize="22sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik"
        android:padding="8dp"
        android:text="@string/title_license_plate"
        android:textSize="18sp"
        />


    <Spinner
        android:id="@+id/spinner_plate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinner_border"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:spinnerMode="dropdown"
        tools:ignore="RtlSymmetry"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rubik"
        android:padding="8dp"
        android:text="@string/title_time_duration"
        android:textSize="18sp"
        />


    <Spinner
        android:id="@+id/spinner_time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/spinner_border"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:spinnerMode="dropdown"
        tools:ignore="RtlSymmetry"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/action_ok"
        android:textSize="18sp"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        />
</LinearLayout>
