<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RechargeActivity"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_recharge"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:targetApi="lollipop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_wallet"
            android:fontFamily="@font/rubik"
            android:text="@string/title_budget_amount"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik"
            android:text="@string/val_0"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            />
        <com.wang.avi.AVLoadingIndicatorView
            android:layout_gravity="center"
            android:id="@+id/progress_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/accent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_recharge"
                    android:background="@color/colorPrimary"
                    android:textSize="18sp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    >
                    <Button
                        android:id="@+id/bt_recharge_5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/val_50"
                        style="?android:attr/borderlessButtonStyle"
                        />
                    <Button
                        android:id="@+id/bt_recharge_10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/val_100"
                        style="?android:attr/borderlessButtonStyle"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    >
                    <Button
                        android:id="@+id/bt_recharge_20"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/val_200"
                        style="?android:attr/borderlessButtonStyle"
                        />
                    <Button
                        android:id="@+id/bt_recharge_50"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/val_500"
                        style="?android:attr/borderlessButtonStyle"
                        />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>