<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SearchActivity"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:gravity="center"
                android:text="@string/prompt_chose_location"
                android:textSize="16sp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                >
                <fragment
                    android:id="@+id/fragment_autocomplete"
                    android:name=
                        "com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/rubik"
                android:gravity="center"
                android:text="@string/prompt_prefer_value"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/rubik"
                android:text="@string/title_budget"
                />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/sb_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_max="60000"
                app:bsb_min="30000"
                app:bsb_second_track_color="@color/md_red_600"
                app:bsb_section_count="3"
                app:bsb_section_text_position="below_section_mark"
                app:bsb_seek_by_section="true"
                app:bsb_show_progress_in_float="false"
                app:bsb_show_section_mark="true"
                app:bsb_show_section_text="true"
                app:bsb_show_thumb_text="true"
                app:bsb_thumb_text_size="18sp"
                app:bsb_touch_to_seek="true"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rubik"
                android:text="@string/title_max_distance"
                />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/sb_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_max="3"
                app:bsb_min="1"
                app:bsb_progress="1"
                app:bsb_second_track_color="@color/md_red_600"
                app:bsb_section_count="4"
                app:bsb_section_text_position="below_section_mark"
                app:bsb_seek_by_section="true"
                app:bsb_show_progress_in_float="false"
                app:bsb_show_section_mark="true"
                app:bsb_show_section_text="true"
                app:bsb_show_thumb_text="true"
                app:bsb_thumb_text_size="18sp"
                app:bsb_touch_to_seek="true"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rubik"
                android:text="@string/title_time_remain"
                />

            <com.xw.repo.BubbleSeekBar
                android:id="@+id/sb_remain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:bsb_auto_adjust_section_mark="true"
                app:bsb_bubble_color="@color/colorPrimary"
                app:bsb_bubble_text_color="@color/white"
                app:bsb_max="12"
                app:bsb_min="1"
                app:bsb_progress="0"
                app:bsb_second_track_color="@color/md_red_600"
                app:bsb_section_count="11"
                app:bsb_section_text_position="bottom_sides"
                app:bsb_show_section_mark="true"
                app:bsb_show_section_text="true"
                app:bsb_show_thumb_text="true"
                app:bsb_track_color="@color/primary"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rubik"
                android:gravity="center"
                android:text="@string/prompt_favor"
                android:textSize="16sp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/rb_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_price"
                    />
                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="72dp"
                    android:text="@string/title_distance"
                    />
            </RadioGroup>
            <Button
                android:id="@+id/bt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:padding="8dp"
                android:text="@string/action_search"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>