<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/prompt_add_invoice"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik"
        android:padding="8dp"
        android:text="@string/title_license_plate"
        android:textSize="20sp" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_license_plate"
            android:drawablePadding="8dp"
            android:inputType="text|textCapCharacters" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/action_add"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>
