<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/prompt_add_vehicle"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik"
        android:padding="8dp"
        android:text="@string/title_license_plate"
        android:textSize="18sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/rubik"
        android:padding="8dp"
        android:text="@string/title_car_type"
        android:textSize="18sp"
        />

    <RadioGroup
        android:id="@+id/rg_car_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        >

        <RadioButton
            android:id="@+id/rb_car"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/bg_radio_button_car"
            android:button="@android:color/transparent"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rb_van"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/bg_radio_button_van"
            android:button="@android:color/transparent"
            />

        <RadioButton
            android:id="@+id/rb_bus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/bg_radio_button_bus"
            android:button="@android:color/transparent"
            />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_add_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/action_add"
        android:textSize="18sp"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        />
</LinearLayout>
